# CarEntertainmentClusterUnit

./: CMakeLists.txt  README.md  test_can.sh
apps/cluster/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
apps/cluster/models/: ClusterModel.cpp  ClusterModel.hpp
apps/cluster/widgets/: GaugeWidget.cpp  GaugeWidget.hpp
core/: CMakeLists.txt
core/CANInterface/: CANInterface.h  CMakeLists.txt  SocketCANInterface.hpp
core/CANInterface/src/: SocketCANInterface.cpp
core/can_interface/: CMakeLists.txt
core/can_interface/include/: CANInterface.hpp  SocketCANInterface.hpp
core/can_interface/src/: CANInterface.cpp  SocketCANInterface.cpp
